--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ i{
     background-image:linear-gradient(rgba(0,168,255, 0.3),rgba(0,168,255, 0.3)), url('../images/background.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    clip-path: polygon(100% 0, 100% 80%, 52% 100%, 0 79%, 0 0);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 77%, 0 100%);
     position: relative;
 }
 .header:before,
@@ -153,3 +153,88 @@ i{
 }
 
 /* Awards  */
+.project-work{
+    margin: 100px 0;
+}
+.project-works h1{
+    font-size: 2rem;
+    text-align: center;
+}
+
+/* Pricing css Start */
+.pricing{
+    width: 100%;
+    height: 100vh;
+    padding: 50px;
+    position: relative;
+}
+.pricing:before{
+    content: '';
+    position: absolute;
+    top: 0%;
+    bottom: 0%;
+    left: 0;
+    right: 0;
+    /* opacity: .3; */
+    z-index: -1;
+    background: linear-gradient(160deg, #16c9f6 55%, #fff 0);
+}
+.money{
+    font-size: 40px;
+    line-height: 1;
+    color: #606060;
+}
+.card{
+    transition: 0.4s ease;
+}
+.card-header{
+    font-size: 1.6rem;
+    font-weight: bold;
+    background-color: #fff !important;
+    padding: 25px 9px !important ;
+}
+.card-body{
+    padding: 30px 0 !important;
+}
+.card-body li{
+    margin: 10px 0;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.6;
+    color: #606060;
+}
+.card-footer{
+    background-color: white !important;
+    padding: 30px 0px !important;
+}
+.card-footer a{
+    border: 1px solid #50d1c0;
+    border-radius: 100px;
+    margin: 0 5px;
+    padding: 12px 35px;
+    outline: none;
+    color:#50d1c0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: center;
+}
+.card:hover .card-footer a{
+    color:#fff;
+    background-color: #50d1c0;
+    text-decoration: none;
+    box-shadow: 0 0 20px 0 rgba(0,0, 0, 0.4);
+}
+.card:hover{
+    transform: translateY(-20px);
+    box-shadow: 0 0 20px 0 rgba(0,0, 0, 0.4);
+}
+.card:hover .card-header,
+.card:hover .money{
+    color: #50b1c0;
+}
+.card-second{
+    transform: translateY(-20px);
+    /* box-shadow: 0 0 20px 0 rgba(0,0, 0, 0.4); */
+}
+/* Pricing css End  */
