--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -91,6 +94,27 @@ i{
     font-size: 1.3rem;
     padding: 10px 0 20px 0;
 }
+/* Hover Effect on navbar  */
+.navbar a{
+    position: relative;
+    display: inline-block; /* Keeps the underline only under the text */
+}
+.navbar a:before{
+    content: '';
+    position: absolute;
+    /* top: 0; */
+    left: 0;
+    bottom: -2px;
+    width: 0%;
+    transition: all 0.3s ease;
+    height: 3px;
+    transform: scaleX(0); 
+    background-color: white;
+}
+.navbar a:hover:before{
+    width: 100%;
+    transform: scaleX(1); /* Show the underline on hover */
+}
 
 /* Header Extra Div  */
 .header-extradiv{
@@ -101,10 +125,11 @@ i{
 .header-extradiv .extra-div{  
     background-color: #fff;
     border: medium none;
-    padding: 50px !important;
+    padding: 40px !important;
     border-radius: 3px;
     transition: 0.3s;
-
+    /* border: 1px solid black; */
+    /* margin: 0 2px; */
 }
 .header-extradiv .extra-div:hover{
     box-shadow: 0 0 20px 0 rgba(0,0, 0, 0.3);
@@ -154,9 +179,9 @@ i{
 
 /* Awards  */
 .project-work{
-    margin: 100px 0;
+    margin: 60px 0;
 }
-.project-works h1{
+.project-work h1{
     font-size: 2rem;
     text-align: center;
 }
@@ -164,8 +189,8 @@ i{
 /* Pricing css Start */
 .pricing{
     width: 100%;
-    height: 100vh;
-    padding: 50px;
+    /* height: 100vh; */
+    padding: 20px 0;
     position: relative;
 }
 .pricing:before{
@@ -238,3 +263,202 @@ i{
     /* box-shadow: 0 0 20px 0 rgba(0,0, 0, 0.4); */
 }
 /* Pricing css End  */
+
+/* Customer Feedback Start  */
+.happyclients{
+    width: 100%;
+    height: 100vh;
+    padding: 60px 0 ;
+}
+.box{
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 2px;
+    transition: 0.3s ease;
+}
+.box:hover{
+    background-color: #16c9f6;
+}
+.box:hover p{
+    color: white;
+}
+.carousel-indicators{
+    position: absolute;
+    right: 0;
+    bottom: -60px !important;
+}
+.carousel-indicators li{
+    background-color: #16c9f6 !important;
+}
+.box a img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 20px;
+}
+.box a{
+    position: relative;
+}
+.box a:after{
+    content: "\f10d";
+    font-family: FontAwesome;
+    width: 40px; 
+    height: 40px;
+    background: linear-gradient(to right, #1e5799 0%, #3ccdbb 0%, #16c9f6 100%);
+    color: white;
+    position: absolute;
+    top: 120%;
+    left: 70%;
+    border-radius: 50%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+.box h1{
+    font-size: 13px;
+    font-size: 400;
+    color: #000;
+    margin-bottom: 10px;
+}
+.box h2{
+    font-size: 13px;
+    font-weight: 400px;
+    color: #666;
+    margin-bottom:20px ;
+}
+
+/* Customer Feedback Ends  */
+
+/* Contact us Start  */
+.contactus{
+    width: 100%;
+    height: auto;
+    /* height: 100vh; */
+    padding: 80px 0;
+    position: relative;
+}
+.contactus:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background: linear-gradient(330deg, #16c9f6 55%, #fff 0%);
+
+}
+.contactus input:focus,
+.contactus textarea:focus{
+    box-shadow: none;
+    outline: blue;
+}
+.form-button button{
+    border: 1px solid #50d1c0;
+    border-radius: 100px;
+    margin: 0 5px;
+    padding: 12px 35px;
+    outline: none;
+    color: #50d1c0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: center;
+    background-color: transparent;
+}
+.form-button button:hover{
+    color: #50d1c0;
+}
+form:hover .form-button button{
+    background-color: #fff;
+    color: #50d1c0;
+    box-shadow: 2px 2px 20px 0 rgba(5, 5, 5, 0.2);
+}
+::placeholder{
+   font-size: 0.8rem;
+}
+
+/* Newsletter  */
+.newsletter{
+    width: 100%;
+    height: auto;
+    margin: 80px 0;
+}
+.news-input{
+    border-radius: 100px 0px 0px 100px !important ;
+    min-width: 150px;
+    min-height: 45px;
+}
+.input-group-text{
+    color: #fff;
+    background-color: #5bc0de;
+    border-radius: 0 100px 100px 0 !important ;
+    min-width: 130px;
+    min-height: 45px;
+}
+
+/* Footer  */
+.footersection{
+    width: 100%;
+    height: auto;
+    padding: 70px 0 20px 0;
+    background-color: #00abff;
+    position: relative;
+}
+.footersection p{
+    color: #fff;
+    
+}
+.footersection li a{
+    font-size: 0.9rem;
+    line-height: 1.6;
+    font-weight: 400;
+    color: #fff;
+    text-transform: capitalize;
+    
+}
+.footersection h3{
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 1.2rem !important;
+    font-weight: 600;
+    text-shadow:  0 2px 5px rgba(0,0, 0, 0.4);
+}
+
+/* For Scroll Bar  */
+#myBtn{
+    /* display: none; */
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+    z-index: 99;
+    border: none;
+    color: #fff;
+    background-color: #00abff;
+    padding: 10px;
+    border-radius: 10px;
+}
+#myBtn:hover{
+    background-color: #606060;
+}
+
+@media(max-width:769px){
+    .card-second{
+        transform: none;
+        margin: .5rem 0; 
+    }  
+    .contactus{
+        padding-top: 720px;        ;
+    }
+}
+@media(max-width:320px){
+    .card-second{
+        transform: none;
+        margin: .5rem 0; 
+    }
+    .contactus{
+        padding-top: 720px;        ;
+    }
+}
